fix: highlight-lines align by code

--- a/packages/valaxy/src/client/styles/common/code.scss
+++ b/packages/valaxy/src/client/styles/common/code.scss
@@ -22,6 +22,11 @@
       padding: 1rem;
       z-index: 1;
       background: none;
+
+      // expand
+      code {
+        display: block;
+      }
     }
   }
 }
@@ -33,10 +38,9 @@
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 1.25rem 0;
+  padding: 1rem 0;
   width: 100%;
   line-height: var(--prism-line-height);
-  font-size: 1.03rem;
   user-select: none;
   overflow: hidden;
 
